JEP 122 추가